--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 		<!-- 主要依赖库的版本定义 -->
 		<s2jh.version>1.0.0</s2jh.version>
 		<struts2.version>2.3.15.1</struts2.version>
-		<spring.version>3.2.4.RELEASE</spring.version>
+		<spring.version>3.2.5.RELEASE</spring.version>
 		<hibernate.version>4.1.8.Final</hibernate.version>
 		<mybatis.version>3.1.1</mybatis.version>
 		<javassist.version>3.15.0-GA</javassist.version>
@@ -159,12 +159,13 @@
 				<artifactId>spring-context-support</artifactId>
 				<version>${spring.version}</version>
 			</dependency>
-            <dependency>
+           
+            <!-- spring -->
+			<dependency>
 				<groupId>org.springframework</groupId>
-				<artifactId>spring-mock</artifactId>
-				<version>2.0.8</version>
+				<artifactId>spring-test</artifactId>
+				<version>${spring.version}</version>
 			</dependency>
-            
 	
 
 			<!-- SPRING basic end -->
@@ -322,6 +323,12 @@
 				<artifactId>ehcache-core</artifactId>
 				<version>${ehcache.version}</version>
 			</dependency>
+			
+			<dependency>
+             <groupId>net.sf.ehcache</groupId>  
+             <artifactId>ehcache-web</artifactId>  
+             <version>2.0.4</version>
+          </dependency>
 			<!-- CACHE end -->
 
 			<!-- jolokia Restful JMX begin -->
@@ -558,13 +565,7 @@
 				<scope>test</scope>
 			</dependency>
 
-			<!-- spring -->
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-test</artifactId>
-				<version>${spring.version}</version>
-				<scope>test</scope>
-			</dependency>
+			
 			
           <dependency>
 	         <groupId>org.bouncycastle</groupId>
